--- a/TrackTables/src/main/resources/application.properties
+++ b/TrackTables/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:78.88.168.216}:3307/proxmus1
 spring.datasource.username=proxmus1
-spring.datasource.password=proxmus1
+spring.datasource.password=SECRETPASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.web.resources.static-locations=classpath:/static/,classpath:/static/ICONS/
